<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">活点地图-好友定位</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_slogan">随时随地看见TA</string>

    <!-- my start -->
    <!-- 主页 -->
    <string name="exit_tips">确认要退出么？</string>
    <string name="accept_tips">用户你好:
        \n在使用活点地图前，请您阅读本服务条款
        \n1、活点地图尊重并保护所有用户的隐私，除非经您亲自许可，不会披露您的个人隐私资料
        \n2、为了显示您在地图上的位置，需要获取您的位置信息，如果系统提示活点地图需要访问您的位置，建议允许访问，否则无法正常定位您的位置
        \n\n感谢您的使用。</string>
    <!-- 意见反馈 -->
    <string name="feedback_commit">提交建议</string>
    <!-- 设置页面 -->
    <string name="set_feedback">意见反馈</string>
    <string name="set_favourite">足迹收藏</string>
    <string name="set_setting">消息通知</string>
    <string name="set_about">关于活点地图</string>
    <!-- my end -->

    <string name="login_username_hint">请输入用户名&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login_email_hint">请在此输入密码&#8230;</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>
    <string name="message_search_hint">搜索&#8230;</string>
    <string name="main_tab_recent">会话</string>
    <string name="main_tab_contact">好友</string>
    <string name="main_tab_footblog">足迹</string>
    <string name="mian_tab_set">设置</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="add_avator">头像</string>
    <string name="add_age">年龄</string>
    <string name="add_phone_number">手机</string>
    <string name="phone_number_tips">(手机号仅本人可见，用来推荐好友，建议填写)</string>
    <string name="add_name">名字</string>
    <string name="add_name_hint">请输入昵称&#8230;</string>
    <string name="add_gender">性别</string>
    <string name="set_notify">消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="tips">提示</string>
    <string name="logout">退出登陆</string>
    <string name="pop_photo">拍照</string>
    <string name="pop_choose">从手机相册选中</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_username_null">用户名不能为空</string>
    <string name="toast_error_comfirm_password">输入的两次密码不一致</string>
    <string name="blacklist">黑名单</string>
    <string name="chat">发起会话</string>
    <string name="add_friend">添加好友</string>
    <string name="recommend_friend">推荐给好友</string>
    <string name="browse_footblog">查看足迹</string>
    <string name="confirm_info">确认资料</string>
    <string name="confirm_info_tips">请点击编辑以上资料，完成后确认</string>
    <string name="send_state">已读</string>
    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="black_tips">已添加至黑名单，你将不再收到对方的消息!</string>
    <string name="username">用户名</string>
    <string name="search">搜索</string>
    <string name="new_friends">好友请求</string>
    <string name="near_people">附近的人</string>
    <string name="contact_recommend">好友推荐</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>
    <string name="show_notice">\t\t\t\t\t自V1.0.6版本开始，应用源码中将不再公开ApplicationId,开发者请自行到官网申请。\n\t\t\t\t\t申请成功之后在应用程序启动页(SplashActivity)进行初始化操作!</string>
    <!-- 个人信息页 -->
    <string name="userinfo_fragment_signs">个性签名</string>
    <string name="userinfo_fragment_edit">这个家伙很懒，什么也没写</string>
    <!-- listview为空的提示 -->
    <string name="empty_tips_footblog">"还没有足迹哟\n足迹页能看到好友和自己发布的足迹"</string>
    <string name="empty_tips_recommend">"没有更多通讯录好友在用\n做吃螃蟹的第一人\n向好友推荐一下吧↓"</string>
    <!-- 地图页控件说明 -->
    <string name="tips_maphome_location">点击：视图平移到我的位置\n长按：平移并放大视图到我的位置\n记得有长按功能哦～</string>
    <string name="tips_maphome_maptype">切换卫星地图和普通地图</string>
    <string name="tips_maphome_allorfriends">这里很重要啊\n在这里切换地图显示类型，有两种类型\n1、好友地图：显示所有好友，无论是否在线，都会显示在地图上，如果只关心亲近的朋友的位置，建议加为好友然后切换到好友地图，这样就不显示陌生人啦\n2、在线地图：显示目前所有在线的人，包括陌生人和在线好友</string>
    <string name="tips_maphome_small">还可以长按哦～\n长按可以直接缩放到全国视图\n试试吧</string>
    <string name="tips_maphome_big">长按地图上的点，放大更精确\n试试吧</string>
    <string name="about_me">开发者</string>
    <string name="about_weibo">微博</string>

</resources>