<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_color"
    android:orientation="vertical" >

    <include
        android:id="@+id/common_actionbar"
        layout="@layout/include_action_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/userinfo_fragment_layout_pading" >

            <RelativeLayout
                android:id="@+id/layout_info"
                style="@style/SetFragment.Item"
                android:minHeight="50dp" >

                <TextView
                    style="@style/Smile.TextView._Black"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/set_myinfo" />

                <TextView
                    android:id="@+id/tv_set_name"
                    style="@style/Smile.TextView._Black"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/register_bottom_arrow" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#eeeeee" />

            <RelativeLayout
                android:id="@+id/layout_blacklist"
                style="@style/SetFragment.Item"
                android:minHeight="50dp" >

                <TextView
                    style="@style/Smile.TextView._Black"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/set_blacklist" />

                <TextView
                    style="@style/Smile.TextView._Black"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/register_bottom_arrow" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#eeeeee" />

            <RelativeLayout
                android:id="@+id/layout_feedback"
                style="@style/SetFragment.Item"
                android:minHeight="50dp" >

                <TextView
                    style="@style/Smile.TextView._Black"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/set_feedback" />

                <TextView
                    android:id="@+id/tv_set_feedback"
                    style="@style/Smile.TextView._Black"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/register_bottom_arrow" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#eeeeee" />

            <RelativeLayout
                android:id="@+id/layout_favourite"
                style="@style/SetFragment.Item"
                android:minHeight="50dp" >

                <TextView
                    style="@style/Smile.TextView._Black"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/set_favourite" />

                <TextView
                    android:id="@+id/tv_set_favourite"
                    style="@style/Smile.TextView._Black"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/register_bottom_arrow" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#eeeeee" />

            <RelativeLayout
                android:id="@+id/rl_switch_notification"
                style="@style/SetFragment.Item" >

                <TextView
                    style="@style/Smile.TextView._Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/set_notify" />

                <CheckBox
                    android:id="@+id/ck_set_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:button="@drawable/selector_setting_choice"
                    android:checked="true"
                    android:clickable="false" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#eeeeee" />

            <RelativeLayout
                android:id="@+id/rl_switch_voice"
                style="@style/SetFragment.Item" >

                <TextView
                    style="@style/Smile.TextView._Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/set_voice" />

                <CheckBox
                    android:id="@+id/ck_set_voice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:button="@drawable/selector_setting_choice"
                    android:checked="true"
                    android:clickable="false" />
            </RelativeLayout>

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#eeeeee" />

            <RelativeLayout
                android:id="@+id/rl_switch_vibrate"
                style="@style/SetFragment.Item" >

                <TextView
                    style="@style/Smile.TextView._Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/set_vibrate" />

                <CheckBox
                    android:id="@+id/ck_set_vibrate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:button="@drawable/selector_setting_choice"
                    android:checked="true"
                    android:clickable="false" />
            </RelativeLayout>

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#eeeeee" />

            <TextView
                android:id="@+id/btn_logout"
                style="@style/TextTheme.tipstheme_buttontext"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/selector_logout"
                android:gravity="center"
                android:paddingBottom="12dip"
                android:paddingTop="12dip"
                android:text="@string/logout" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>